# user_hub_web_app

./: README.md  TASK.md  UNIT_TESTS.md  api_reference.md  architecture.md  docker-compose.yml  package-lock.json  run_tests.sh  run_web_site.sh  setup.sh  temp.md
backend/: .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/accounts/: admin.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/backend/: settings.py
backend/core/: exceptions.py  jwt_authentication.py  settings.py  urls.py  wsgi.py
backend/locales/: README.txt
backend/profiles/: admin.py  apps.py  boot.py  middleware.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
backend/tests/: test_auth_and_profile.py  test_refresh_route.py  test_settings.py  test_users_endpoints.py
ui_tests_pw/: Dockerfile  LIST_OF_TESTS.md  README.md  TASK.md  UI_AUTOMATION_TASK.md  config.py  conftest.py  docker-compose.ui-tests.yml  docker-compose.yml  docker_deprecated  manage.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  run_ui_tests.sh  setup.sh  wait-for-http.sh
ui_tests_pw/api/: api_utils.py
ui_tests_pw/core/: constants.py  settings.py
ui_tests_pw/pages/: about_website_page.py  base_page.py  change_password_page.py  excel_import_page.py  login_page.py  profile_edit_page.py  profile_view_page.py  reset_password_page.py  settings_page.py  signup_page.py  stats_page.py  user_delete_confirm_page.py  users_table_page.py
ui_tests_pw/test_data/: import_template_test_50_users.xlsx
ui_tests_pw/tests/: test_demo.py  (+20 more)
(+305 files in other folders)
