[tool.poetry]
name = "user-manager-backend"
version = "0.1.0"
description = "Django REST backend for user manager"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
psycopg2-binary = "^2.9"
django-cors-headers = "^4.4"
Pillow = "^10.4"
pandas = "^2.2"
openpyxl = "^3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
flake8 = "^7.0"
