
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "user-hub-ui-tests"
version = "0.1.0"
description = "Playwright UI test suite for Users App (Django + React)"
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0.0",
  "pytest-playwright>=0.5.0",
  "playwright>=1.47.0",
  "pytest-xdist>=3.6.1",
  "pytest-rerunfailures>=14.0",
  "allure-pytest>=2.13.5",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3"
]
